2007-12-27  Nicolas François  <nicolas.francois@centraliens.net>

	Merge Debian's patch 462_warn_to_edit_shadow
	* NEW, src/vipw.c: Recommend editing the shadowed (resp. regular) file
	if the regular (resp. shadowed) file was edited.

2007-12-26  Nicolas François  <nicolas.francois@centraliens.net>

	Merge Debian's patch 451_login_PATH
	* NEWS, libmisc/setupenv.c: Export PATH according to ENV_PATH and
	ENV_SUPATH, as for su. This impacts login.
	* man/login.1.xml: PATH and SUPATH are now used both when PAM support
	is disabled and enabled.

2007-12-26  Nicolas François  <nicolas.francois@centraliens.net>

	Merge Debian's patch 496_login_init_session
	* src/login.c, src/sulogin.c: If started as init, start a new session.

2007-12-26  Nicolas François  <nicolas.francois@centraliens.net>

	Merge Debian's patch 408_passwd_check_arguments
	* NEWS, src/passwd.c: Make sure that no more than one username
	argument was provided.

2007-12-26  Nicolas François  <nicolas.francois@centraliens.net>

	Merge Debian's patch 412_lastlog_-u_numerical_range
	* NEWS, src/lastlog.c, man/lastlog.8.xml: Accept numerical user, or
	ranges with the -u option.

2007-12-26  Nicolas François  <nicolas.francois@centraliens.net>

	Merge Debian's patch 466_fflush-prompt
	* libmisc/Makefile.am, lib/prototypes.h, libmisc/yesno.c, src/grpck.c,
	src/pwck.c: move yes_or_no() from grpck/pwck to a separate
	libmisc/yesno.c (with a read_only argument).
	* libmisc/fields.c, libmisc/yesno.c: Make sure stdout is flushed before
	reading the user's answer.

2007-12-26  Nicolas François  <nicolas.francois@centraliens.net>

	Merge Debian's patch 480_getopt_args_reorder
	* NEWS, src/su.c: su's arguments are now reordered.

2007-12-26  Nicolas François  <nicolas.francois@centraliens.net>

	Merge RedHat's patch shadow-4.0.18.1-mtime.patch:
	* NEWS: Document that usermod will now preserve user's file modification
	and access time.
	* libmisc/copydir.c: Preserve the access and modification time of copied